--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,7 @@ a {
 
 .kauf-container header {
   background-color: #d58512;
-  height: 10vh;
+  min-height: 10vh;
 }
 
 .kauf-container footer{
@@ -27,7 +27,7 @@ a {
 }
 
 .content {
-  background-color: #3d9970;
+  background-color: #C7C7C7;
   height: 80vh;
 }
 
@@ -74,7 +74,7 @@ a {
   display: none;
   position: absolute;
   top:0;
-  right: -126px;
+  right: -112px;
   background-color: teal;
   padding: 0;
 }
