--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,17 +40,16 @@
     </header>
     <main class="row">
         <div class="content col-md-10 col-sm-10">
-          content
-          <span uib-dropdown on-toggle="toggled(open)" class="btn btn-info">
-            <a href id="simple-dropdown" uib-dropdown-toggle>
-              Click me for a dropdown, yo!
-            </a>
-            <ul class="dropdown-menu" uib-dropdown-menu aria-labelledby="simple-dropdown">
-              <li ng-repeat="select in kauf.selectData">
-                <a ng-href="/{{select.id }}">{{select.title}}</a>
-              </li>
-            </ul>
-          </span>
+          <div>
+            <label for="select">Choose article ID:</label>
+            <select ng-options="item.id as item.id for item in kauf.selectData"
+                    ng-model="kauf.selected" id="select"></select>
+          </div>
+          <h3>{{ kauf.selectDataItem.title }}</h3>
+          <p>{{ kauf.selectDataItem.body }}</p>
+
+
+          <button type="button" ng-click="kauf.open()">Open Modal</button>
         </div>
         <div class="context col-md-2 col-sm-2">
           context
@@ -62,6 +61,7 @@
   </div>
   <script src="/libs/angular/angular.min.js"></script>
   <script src="/libs/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
+  <script src="/libs/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
   <script src="/js/app.js"></script>
   <script src="/js/services/posts.service.js"></script>
 </body>
